# bigOnavigator

./: DOCS.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
bigonavigator/: __init__.py  example.py
